<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movie_title"
            style="@style/Title_appearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            tools:text="@string/title_hint" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="130dp"
                android:layout_height="180dp"
                android:layout_marginLeft="4dp"
                tools:background="@color/colorAccent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:orientation="vertical">

                <TextView
                    style="@style/Descriptive_tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date" />

                <TextView
                    android:id="@+id/release_date"
                    style="@style/Descriptive_views"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    tools:text="@string/date_hint" />

                <TextView
                    style="@style/Descriptive_tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="34dp"
                    android:text="@string/rating" />

                <TextView
                    android:id="@+id/rating"
                    style="@style/Descriptive_views"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    tools:text="@string/rating_hint" />
            </LinearLayout>

            <ImageView
                android:id="@+id/favorite_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:src="@drawable/ic_border_star_24dp"
                android:tint="@color/colorAccent" />

        </LinearLayout>

        <TextView
            android:id="@+id/overview"
            style="@style/Overview_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            tools:text="@string/overview_hint" />

        <TextView
            android:id="@+id/text_trailer_title"
            style="@style/Descriptive_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/trailer_title" />

        <LinearLayout
            android:id="@+id/layout_trailers_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/text_reviews_title"
            style="@style/Descriptive_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/reviews_title" />

        <LinearLayout
            android:id="@+id/layout_reviews_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </LinearLayout>
</ScrollView>